# XCoder

./: index.html  package.json  pnpm-lock.yaml
src/: App.tsx  LandingPage.tsx  MainPage.tsx  Titlebar.tsx  commands.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  problems.csv  solved_problems.csv  store.json  tauri.conf.json
src-tauri/problems_sidecar/: go.mod  go.sum  main.go  problems.csv
src-tauri/src/: commands.rs  judge.rs  main.rs  problem.rs  store.rs
src/MainPage/: index.tsx
